--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         </div> -->
                     </div>
                     <div class="about__button">
-                        <a download="" href="assets/pdf/Tran_Hoang_Tuan_CV.pdf" class="button button--flex">
+                        <a download="" href="assets/pdf/TRAN_HOANG_TUAN_CV (1).pdf" class="button button--flex">
                             Resume <i class="uil uil-cloud-download button__icon"></i>
                         </a> 
                     </div>
